# qontinui-api

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  alembic.ini  analyze_user_screenshots.py  auth_simple.py  debug_real_analysis.py  debug_small_region.py  main.py  mask_pattern_api.py  masked_patterns_api.py  mypy_output.txt  pyproject.toml  requirements.txt  scheduler_api.py  semantic_api.py  start-api.sh  start.sh  state_discovery_api.py  state_discovery_api_refactored.py  static_screenshot_provider.py  test_cors.html  test_direct_analysis.py  test_extraction.html  test_merge.py  test_process_api.py  test_rag_routes.py  test_real_extraction.py  test_region_selection.py  test_sam2.py  test_sam3.py  test_semantic.py  test_workflow_api.py  web_extraction_api.py
alembic/: env.py
alembic/versions/: 9675cec2baa1_add_snapshot_tables.py  a1b2c3d4e5f6_add_priority_to_snapshot_runs.py  b2c3d4e5f6g7_add_is_start_screenshot_to_snapshot_actions.py
app/: __init__.py
app/adapters/: state_adapter.py
app/core/: config.py  database.py
app/models/: __init__.py  capture.py  config_schemas.py  snapshot.py
app/routes/: RAG_API_README.md  capture.py  embeddings.py  integration_testing.py  pathfinding.py  rag.py  snapshot_search.py  snapshots.py  vision_extraction.py
app/routes/execution/: __init__.py  execution_router.py  health_router.py  history_router.py  models.py  state_router.py  websocket_router.py
app/services/: capture_service.py  filter_builder.py  snapshot_analysis.py  snapshot_deduplication.py  snapshot_query.py  snapshot_recommendations.py  snapshot_sync.py  state_coverage.py
app/services/inference/: __init__.py  inference_engine.py  model_export.py
app/services/rag/: __init__.py  description_service.py  element_service.py  export_service.py  find_rag.py  generate_embeddings.py  project_service.py  search_rag.py  state_service.py  transition_service.py
app/services/storage/: __init__.py  base.py  factory.py  frame_extractor.py  local.py  s3.py
app/testing/: README.md  __init__.py  config.py  deficiency_detector.py  enums.py  models.py  path_tracker.py
app/testing/exploration/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  backtracking.py  diversity.py  examples.py  failure_handler.py  path_explorer.py  strategies.py
state_discovery/: analysis_handler.py  upload_storage.py  websocket_manager.py
tests/: test_scheduler_api.py
tests/testing/: test_path_tracker.py
