[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry]
name = "qontinui-api"
version = "0.1.1"
description = "REST API service for Qontinui GUI automation"
authors = ["Joshua Spinak <jspinak@alum.mit.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qontinui/qontinui-api"
repository = "https://github.com/qontinui/qontinui-api"
documentation = "https://github.com/qontinui/qontinui-api#readme"
keywords = ["gui", "automation", "api", "fastapi", "qontinui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Testing",
]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12,<3.14"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
pillow = "^10.2"
numpy = "^1.26"
opencv-python = "^4.9"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cors = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.43"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
email-validator = "^2.3.0"
easyocr = "^1.7.0"
redis = "^7.1.0"
slowapi = "^0.1.9"
qontinui = {path = "../qontinui", develop = true}
qontinui-schemas = {path = "../qontinui-schemas", develop = true}
torch = {version = "^2.5", source = "pytorch-cuda"}
torchvision = {version = "^0.20", source = "pytorch-cuda"}
aiofiles = "^25.1.0"
aioboto3 = "^15.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
black = "^24.0"
ruff = "^0.6"
mypy = "^1.8"
pre-commit = "^3.6"
flake8 = "^7.3.0"
types-requests = "^2.32.4.20250913"
types-pyyaml = "^6.0.12.20250915"
types-aiofiles = "^25.1.0.20251011"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["qontinui"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-v",
]
